# dart_mini_audio

./: .gitmodules  .metadata  README.md  pubspec.yaml
android/: CMakeLists.txt  CMakeLists_cp.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/tadjaur/plugin/mini_player/: MiniPlayerPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/tadjaur/plugin/mini_player_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/go/: go.mod  hover.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  window_configuration.cc
example/linux/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: AppConfiguration.props  Runner.vcxproj
example/windows/runner/: window_configuration.cpp
go/: README.md  go.mod  plugin.go
ios/: mini_player.podspec
ios/Classes/: MiniPlayerPlugin.h  MiniPlayerPlugin.m  SwiftMiniPlayerPlugin.swift
lib/: mini_player.dart
lib/src/: audio_meta.dart  c_channel.dart  global_type.dart
linux/: CMakeLists.txt  mini_player_plugin.cc
linux/include/: mini_player_plugin.h
macos/: mini_player.podspec
macos/Classes/: MiniPlayerPlugin.swift
miniaudio_fork/: mini2player.c  miniaudio.h  miniplayer.c  util.c
miniaudio_fork/examples/: simple_mixing  simple_mixing.c  simple_playback_sine.c
miniaudio_fork/extras/: uwma.h
test/: mini_player_test.dart
windows/: PluginInfo.props  mini_player_plugin.cpp  mini_player_plugin.h  plugin.vcxproj
